manifests/pichinchaweb.yaml
apiVersion: v1
kind: Service
metadata:
  name: pichinchaweb
  labels:
    app: pichincha-api
spec:
  selector:
    app: pichincha-api
    tier: web
  type: LoadBalancer
  ports:
  - port: 80
    nodePort : 31000
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pichinchaweb
  labels:
    app: pichincha-api
spec:
  template:
    metadata:
      labels:
        app: pichincha-api
        tier: web
    spec:
      containers:
      - name: pichincha-api
        image: DOCKER_IMAGE_NAME
        ports:
        - containerPort: 8080
